fix nav bar effect with visibility

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -27,7 +27,7 @@
     top: 4.1rem;
     right: 4.1rem;
     z-index: 100;
-    // transform: scale(80);
+    transition: transform 500ms ease-in-out;
   }
 
   &__nav {
@@ -37,13 +37,16 @@
     top: 0;
     left: 0;
     z-index: 500;
+    opacity: 0;
     visibility: hidden;
+    transition: opacity 300ms ease-in-out;
   }
 
   &__list {
     @include center-center;
     list-style: none;
     text-align: center;
+    width: 100%;
   }
 
   &__item {
@@ -83,5 +86,11 @@
 
   &__checkbox:checked ~ &__background {
     transform: scale(80);
+  }
+
+  &__checkbox:checked ~ &__nav {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 300ms ease-in-out 400ms;
   }
 }
