--- a/sass/main.css
+++ b/sass/main.css
@@ -140,7 +140,7 @@ body {
   height: 95vh;
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0% 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0% 100%);
 }
 
 .header__logo-box {
@@ -256,6 +256,7 @@ body {
   top: 4.1rem;
   right: 4.1rem;
   z-index: 100;
+  transition: transform 500ms ease-in-out;
 }
 
 .navigation__nav {
@@ -265,7 +266,9 @@ body {
   top: 0;
   left: 0;
   z-index: 500;
+  opacity: 0;
   visibility: hidden;
+  transition: opacity 300ms ease-in-out;
 }
 
 .navigation__list {
@@ -275,6 +278,7 @@ body {
   transform: translate(-50%, -50%);
   list-style: none;
   text-align: center;
+  width: 100%;
 }
 
 .navigation__item {
@@ -306,6 +310,12 @@ body {
 
 .navigation__checkbox:checked ~ .navigation__background {
   transform: scale(80);
+}
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 300ms ease-in-out 400ms;
 }
 
 .btn, .btn:link, .btn:visited {
